--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,15 @@
 {
   "compilerOptions": {
     "target": "es2016",
-    "lib": [ "es2016" ],
+    "lib": [
+      "es2016"
+    ],
     "module": "commonjs",
     "outDir": "out",
     "importHelpers": true,
     "sourceMap": true,
     "strict": true,
+    "noImplicitAny": true,
     "noImplicitReturns": true,
     "noUnusedLocals": true,
     "removeComments": true,
@@ -16,4 +19,3 @@
     "src/main.ts"
   ]
 }
-  
