--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,17 +1,15 @@
 {
   "version": "0.2.0",
-  "configurations": [
-    {
-      "type": "extensionHost",
-      "request": "launch",
-      "name": "Example adapter",
-      "runtimeExecutable": "${execPath}",
-      "args": [
-        "--extensionDevelopmentPath=${workspaceFolder}"
-      ],
-      "outFiles": [
-        "${workspaceFolder}/out"
-      ]
-    }
-  ]
+  "configurations": [{
+    "type": "extensionHost",
+    "request": "launch",
+    "name": "Bandit adapter",
+    "runtimeExecutable": "${execPath}",
+    "args": [
+      "--extensionDevelopmentPath=${workspaceFolder}"
+    ],
+    "outFiles": [
+      "${workspaceFolder}/out"
+    ]
+  }]
 }
