--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": "https://github.com/hbenl/vscode-example-test-adapter.git"
   },
   "bugs": {
-    "url": "https://github.com/hbenl/vscode-example-test-adapter/issues"
+    "email": "matthias.fueg@dampsoft.de"
   },
   "categories": [
     "Other"
@@ -36,19 +36,20 @@
     "publish": "vsce publish"
   },
   "dependencies": {
+    "chokidar": "^2.0.4",
     "entities": "^1.1.1",
+    "fs-extra": "^7.0.1",
     "tslib": "^1.9.3",
     "vscode-test-adapter-api": "^1.0.1",
     "vscode-test-adapter-util": "^0.5.0",
-    "xml2js": "^0.4.19",
-    "chokidar": "^2.0.4"
+    "xml2js": "^0.4.19"
   },
   "devDependencies": {
+    "@types/fs-extra": "^5.0.4",
     "@types/entities": "^1.1.0",
     "@types/uuid": "^3.4.4",
     "@types/xml-parser": "^1.2.29",
     "@types/xml2js": "^0.4.2",
-    "chokidar": "^2.0.4",
     "typescript": "^3.0.3",
     "vsce": "^1.47.0",
     "vscode": "^1.1.21"
@@ -67,37 +68,33 @@
       "type": "object",
       "title": "Bandit Test Explorer configuration",
       "properties": {
-        "banditTestExplorer.executable": {
-          "description": "The location of your bandit test executable (absolute or relative to the workspace folder)",
-          "type": "string",
+        "banditTestExplorer.testsuites": {
+          "description": "The configuration of your bandit tests. Either a configuration object or a path to the JSON configuration file. (relative to the workspace folder or absolute path)",
+          "type": [
+            "string",
+            "array",
+            "object"
+          ],
           "scope": "resource"
         },
-        "banditTestExplorer.arguments": {
-          "description": "Additional arguments for the executable call",
-          "type": "array",
-          "scope": "resource",
-          "default": []
-        },
-        "banditTestExplorer.env": {
-          "description": "Environment variables to be set when running the tests",
-          "type": "object",
-          "additionalProperties": {
-            "type": "string"
-          },
-          "default": {},
-          "scope": "resource"
-        },
-        "banditTestExplorer.cwd": {
-          "description": "The working directory where bandit is executed (absolute or relative to the workspace folder)",
-          "type": "string",
-          "scope": "resource",
-          "default": "${workspaceFolder}"
-        },
-        "banditTestExplorer.maxParallelProcess": {
+        "banditTestExplorer.maxParallelProcesses": {
           "description": "The maximum amount of parallel processes startet during a test run",
           "type": "integer",
           "scope": "resource",
           "default": 1
+        },
+        "banditTestExplorer.watchTimeoutSec": {
+          "description": "Can help to prevent autorun when watched files are compiled frequently.",
+          "type": [
+            "number"
+          ],
+          "default": 10,
+          "scope": "resource"
+        },
+        "banditTestExplorer.allowKillProcess": {
+          "description": "Allows to kill running processes when a testrun is cancelled or aborted.",
+          "type": "boolean",
+          "scope": "resource"
         },
         "banditTestExplorer.logpanel": {
           "description": "Write diagnotic logs to an output panel",
