--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "tslib": "^1.9.3",
     "vscode-test-adapter-api": "^1.0.1",
     "vscode-test-adapter-util": "^0.5.0",
-    "xml2js": "^0.4.19"
+    "xml2js": "^0.4.19",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@types/fs-extra": "^5.0.4",
