--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "chokidar": "^2.0.4",
     "entities": "^1.1.1",
     "fs-extra": "^7.0.1",
+    "performance-now": "^2.1.0",
     "tslib": "^1.9.3",
     "vscode-test-adapter-api": "^1.0.1",
     "vscode-test-adapter-util": "^0.5.0",
