- Reporting überarbeitet -- warnings hinzugefügt, statt nur error zu nutzen -- Loglevel kann nun konfiguriert werden -- Logger in eigene Datei extrahiert -- eine statische Logger-Instanz bereitgestellt - Kommentare ergänzt

--- a/package.json
+++ b/package.json
@@ -103,6 +103,18 @@
           "description": "Write diagnostic logs to the given file.",
           "type": "string",
           "scope": "resource"
+        },
+        "banditTestExplorer.loglevel": {
+          "description": "Logging level used to log notifications. All notifications of the same or higher level will be logged.",
+          "type": "string",
+          "scope": "resource",
+          "default": "error",
+          "enum": [
+            "debug",
+            "info",
+            "warning",
+            "error"
+          ]
         }
       }
     },
