--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "build": "tsc",
     "watch": "tsc -w",
     "rebuild": "npm run clean && npm run build",
-    "package": "vsce package",
+    "package": "vsce package --yarn",
     "publish": "vsce publish"
   },
   "dependencies": {
-    "chokidar": "^2.0.4",
+    "chokidar": "^2.1.1",
     "entities": "^1.1.1",
     "fs-extra": "^7.0.1",
     "performance-now": "^2.1.0",
