--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "publish": "vsce publish"
   },
   "dependencies": {
+    "async-mutex": "^0.1.3",
     "chokidar": "^2.1.1",
     "entities": "^1.1.1",
     "fs-extra": "^7.0.1",
     "performance-now": "^2.1.0",
     "tslib": "^1.9.3",
+    "uuid": "^3.3.2",
     "vscode-test-adapter-api": "^1.0.1",
     "vscode-test-adapter-util": "^0.5.0",
     "xml2js": "^0.4.19"
