--- a/package.json
+++ b/package.json
@@ -38,20 +38,15 @@
   "dependencies": {
     "async-mutex": "^0.1.3",
     "chokidar": "^2.1.1",
-    "entities": "^1.1.1",
     "fs-extra": "^7.0.1",
     "performance-now": "^2.1.0",
     "tslib": "^1.9.3",
     "uuid": "^3.3.2",
     "vscode-test-adapter-api": "^1.0.1",
-    "vscode-test-adapter-util": "^0.5.0",
-    "xml2js": "^0.4.19"
+    "vscode-test-adapter-util": "^0.5.0"
   },
   "devDependencies": {
-    "@types/entities": "^1.1.0",
     "@types/fs-extra": "^5.0.5",
-    "@types/xml-parser": "^1.2.29",
-    "@types/xml2js": "^0.4.2",
     "typescript": "^3.0.3",
     "vsce": "^1.47.0",
     "vscode": "^1.1.21"
@@ -71,7 +66,7 @@
       "title": "Bandit Test Explorer configuration",
       "properties": {
         "banditTestExplorer.testsuites": {
-          "description": "The configuration of your bandit tests. Either a configuration object or a path to the JSON configuration file. (relative to the workspace folder or absolute path).",
+          "description": "The configuration of your bandit test projects. Either a single configuration object or a path to the JSON configuration file (relative to the workspace folder or absolute path).",
           "type": [
             "string",
             "array",
@@ -86,13 +81,13 @@
           "default": 1
         },
         "banditTestExplorer.watchTimeoutSec": {
-          "description": "Can help to prevent autorun when watched files are compiled frequently.",
+          "description": "A timeout in seconds that helps to prevent the auto run when watched files are compiled often.",
           "type": "number",
           "default": 5,
           "scope": "resource"
         },
         "banditTestExplorer.allowKillProcess": {
-          "description": "Allows to hard kill running processes when a testrun is cancelled or aborted.",
+          "description": "Allows to hard kill running processes when a test run is cancelled or aborted.",
           "type": "boolean",
           "scope": "resource"
         },
@@ -102,12 +97,12 @@
           "scope": "resource"
         },
         "banditTestExplorer.logfile": {
-          "description": "Write diagnostic logs to the given file.",
+          "description": "Enables the output of diagnostic logs to the specified file if provided.",
           "type": "string",
           "scope": "resource"
         },
         "banditTestExplorer.loglevel": {
-          "description": "Logging level used to log notifications. All notifications of the same or higher level will be logged.",
+          "description": "The logging level used to filter notifications. All notifications of the same or higher level will be logged.",
           "type": "string",
           "scope": "resource",
           "default": "error",
