--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   "publisher": "mf",
   "version": "1.1.1",
   "license": "MIT",
-  "homepage": "https://github.com/dampsoft/vscode-banditcpp-test-adapter",
+  "homepage": "https://github.com/dampsoft/vscode-banditcpp-test-adapter/blob/master/README.md",
   "repository": {
     "type": "git",
-    "url": "https://github.com/dampsoft/vscode-banditcpp-test-adapter"
+    "url": "https://github.com/dampsoft/vscode-banditcpp-test-adapter.git"
   },
   "bugs": {
+    "url": "https://github.com/dampsoft/vscode-banditcpp-test-adapter/issues",
     "email": "matthias.fueg@dampsoft.de"
   },
   "categories": [
