--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,16 +1,28 @@
 {
   "version": "0.2.0",
-  "configurations": [{
-    "type": "extensionHost",
-    "request": "launch",
-    "name": "Bandit adapter",
-    "runtimeExecutable": "${execPath}",
-    "args": [
-      "--extensionDevelopmentPath=${workspaceFolder}"
-    ],
-    "outFiles": [
-      "${workspaceFolder}/out"
-    ],
-    "preLaunchTask": "npm: watch"
-  }]
+  "configurations": [
+    {
+      "type": "extensionHost",
+      "request": "launch",
+      "name": "Bandit adapter",
+      "runtimeExecutable": "${execPath}",
+      "args": ["--extensionDevelopmentPath=${workspaceFolder}"],
+      "outFiles": ["${workspaceFolder}/out"],
+      "preLaunchTask": "npm: watch"
+    },
+    {
+      "name": "Launch Tests",
+      "type": "extensionHost",
+      "request": "launch",
+      "runtimeExecutable": "${execPath}",
+      "args": [
+        "--extensionDevelopmentPath=${workspaceRoot}",
+        "--extensionTestsPath=${workspaceRoot}/out/test"
+      ],
+      "stopOnEntry": false,
+      "sourceMaps": true,
+      "outFiles": ["${workspaceFolder}/out/**/*.js"],
+      "preLaunchTask": "npm: watch"
+    }
+  ]
 }
