--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "@types/mocha": "^5.2.6",
     "mocha": "^6.0.2",
     "typescript": "^3.0.3",
-    "vsce": "^1.58.0",
+    "vsce": ">=1.59.0",
     "vscode": "^1.1.21"
   },
   "engines": {
