--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,13 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "type": "node",
+      "request": "launch",
+      "name": "Gulp build",
+      "program": "${workspaceFolder}/node_modules/gulp/bin/gulp.js",
+      "args": ["build"]
+    },
+    {
       "type": "extensionHost",
       "request": "launch",
       "name": "Bandit adapter",
