--- a/package.json
+++ b/package.json
@@ -29,30 +29,41 @@
   "main": "out/main.js",
   "scripts": {
     "postinstall": "node ./node_modules/vscode/bin/install",
-    "clean": "rimraf out *.vsix",
-    "build": "tsc",
-    "watch": "tsc -w",
+    "build": "tsc -b",
+    "watch": "tsc -b -w",
     "rebuild": "npm run clean && npm run build",
     "package": "vsce package",
-    "publish": "vsce publish"
+    "publish": "vsce publish",
+    "clean": "gulp clean"
   },
   "dependencies": {
     "async-mutex": "^0.1.3",
-    "chokidar": "^2.1.1",
+    "chokidar": "^3.0.0",
     "fs-extra": "^7.0.1",
     "performance-now": "^2.1.0",
     "tslib": "^1.9.3",
     "uuid": "^3.3.2",
-    "vscode-test-adapter-api": "^1.0.1",
-    "vscode-test-adapter-util": "^0.5.0"
+    "vscode-nls": "^4.1.0",
+    "vscode-test-adapter-api": "^1.7.0",
+    "vscode-test-adapter-util": "^0.7.0"
   },
   "devDependencies": {
     "@types/fs-extra": "^5.0.5",
     "@types/mocha": "^5.2.6",
-    "mocha": "^6.0.2",
-    "typescript": "^3.0.3",
-    "vsce": ">=1.59.0",
-    "vscode": "^1.1.21"
+    "@types/node": "^12.0.0",
+    "del": "^4.1.1",
+    "event-stream": "4.0.1",
+    "gulp": "^4.0.1",
+    "gulp-cli": "^2.2.0",
+    "gulp-filter": "^5.1.0",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-typescript": "5.0.1",
+    "mocha": "^6.1.4",
+    "tslint": "^5.16.0",
+    "typescript": "^3.4.5",
+    "vsce": ">=1.61.0",
+    "vscode": "^1.1.33",
+    "vscode-nls-dev": "^3.2.6"
   },
   "engines": {
     "node": ">=10.15",
@@ -121,7 +132,7 @@
     },
     "commands": [
       {
-        "title": "Starte Test",
+        "title": "%command.start_test_filtered%",
         "command": "bandit-test-explorer.run",
         "category": "Bandit Test Explorer"
       }
