--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "es2018",
     "lib": ["es2018"],
     "module": "commonjs",
+    "rootDir": "src",
     "outDir": "out",
     "importHelpers": true,
     "sourceMap": true,
@@ -13,5 +14,5 @@
     "removeComments": true,
     "skipLibCheck": true
   },
-  "include": ["src/**/*.ts"]
+  "exclude": ["node_modules", ".vscode-test"]
 }
