- fixed gulpfile - localization now fixed -- string literals instead of passed id-strings (fixes literal-warning) -- localize()-functions moved to translated files (fixes incorrect externalisation warning)

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,17 +7,44 @@
       "type": "npm",
       "script": "watch",
       "isBackground": true,
-      "problemMatcher": ["$tsc-watch"]
+      "problemMatcher": [
+        "$tsc-watch"
+      ]
     },
     {
       "type": "npm",
       "script": "build",
-      "problemMatcher": ["$tsc"]
+      "problemMatcher": [
+        "$tsc"
+      ]
     },
     {
       "type": "gulp",
       "task": "build",
-      "problemMatcher": ["$gulp-tsc"]
+      "problemMatcher": [
+        "$gulp-tsc"
+      ]
+    },
+    {
+      "type": "gulp",
+      "task": "compile",
+      "problemMatcher": [
+        "$gulp-tsc"
+      ]
+    },
+    {
+      "type": "gulp",
+      "task": "package",
+      "problemMatcher": [
+        "$gulp-tsc"
+      ]
+    },
+    {
+      "type": "npm",
+      "script": "package",
+      "problemMatcher": [
+        "$gulp-tsc"
+      ]
     }
   ]
 }
