--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "dependencies": {
     "async-mutex": "^0.1.3",
-    "chokidar": "^3.0.0",
+    "chokidar": ">=2.1.1",
     "fs-extra": "^7.0.1",
     "performance-now": "^2.1.0",
     "tslib": "^1.9.3",
