- activated publish task in gulpfile - made configuration disposable - moved the config change watch to configuration class - added a test-spawner factory - prepared the "factory" peroperty inside the testsuite config - added i18n messages

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -45,6 +45,13 @@
       "problemMatcher": [
         "$gulp-tsc"
       ]
+    },
+    {
+      "type": "gulp",
+      "task": "publish",
+      "problemMatcher": [
+        "$gulp-tsc"
+      ]
     }
   ]
 }
