- added vscode task for gulp clean - added missing i18n translations

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -52,6 +52,11 @@
       "problemMatcher": [
         "$gulp-tsc"
       ]
+    },
+    {
+      "type": "gulp",
+      "task": "clean",
+      "problemMatcher": []
     }
   ]
 }
