- failed test pojects will be ignored while loading - added a second progress option -- shows in the status bar -- can be configured via "progressVsualization" -- added translations for the config property

--- a/package.json
+++ b/package.json
@@ -127,6 +127,16 @@
             "warning",
             "error"
           ]
+        },
+        "banditTestExplorer.progressVisualization": {
+          "description": "%properties.banditTestExplorer.progressVisualization%",
+          "type": "string",
+          "scope": "resource",
+          "default": "dialogBox",
+          "enum": [
+            "dialogBox",
+            "statusBar"
+          ]
         }
       }
     },
