--- a/package.json
+++ b/package.json
@@ -39,11 +39,12 @@
   },
   "dependencies": {
     "async-mutex": "^0.1.3",
+    "chokidar": ">=2.1.5",
     "fs-extra": "^8.1.0",
     "npm-audit-resolver": "^1.5.0",
     "performance-now": "^2.1.0",
     "tslib": "^1.10.0",
-    "uuid": "^3.3.2",
+    "uuid": "^3.3.3",
     "vscode-nls": "^4.1.1",
     "vscode-test-adapter-api": "^1.7.0",
     "vscode-test-adapter-util": "^0.7.0"
