--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "publisher": "dampsoft",
   "version": "1.5.3",
   "license": "MIT",
-  "homepage": "https://github.com/dampsoft/vscode-banditcpp-test-adapter/blob/master/README.md",
+  "homepage": "https://github.com/dampsoft/vscode-banditcpp-test-adapter",
   "repository": {
     "type": "git",
     "url": "https://github.com/dampsoft/vscode-banditcpp-test-adapter.git"
@@ -26,48 +26,7 @@
     "bandit",
     "c++"
   ],
-  "main": "out/main.js",
-  "scripts": {
-    "postinstall": "node ./node_modules/vscode/bin/install",
-    "build": "tsc -b",
-    "watch": "tsc -b -w",
-    "rebuild": "npm run clean && npm run build",
-    "package": "vsce package",
-    "publish": "vsce publish",
-    "clean": "gulp clean",
-    "check": "npm-upgrade check"
-  },
-  "dependencies": {
-    "async-mutex": "^0.1.3",
-    "chokidar": ">=2.1.5",
-    "fs-extra": "^8.1.0",
-    "npm-audit-resolver": "^1.5.0",
-    "performance-now": "^2.1.0",
-    "tslib": "^1.10.0",
-    "uuid": "^3.3.3",
-    "vscode-nls": "^4.1.1",
-    "vscode-test-adapter-api": "^1.7.0",
-    "vscode-test-adapter-util": "^0.7.0"
-  },
-  "devDependencies": {
-    "@types/fs-extra": "^8.0.0",
-    "@types/mocha": "^5.2.7",
-    "@types/node": "^12.7.2",
-    "del": "^5.0.0",
-    "event-stream": "4.0.1",
-    "gulp": "^4.0.2",
-    "gulp-cli": "^2.2.0",
-    "gulp-filter": "^6.0.0",
-    "gulp-sourcemaps": "^2.6.5",
-    "gulp-typescript": "5.0.1",
-    "mocha": "^6.2.0",
-    "tslint": "^5.18.0",
-    "typescript": "^3.5.3",
-    "vsce": ">=1.66.0",
-    "vscode": "^1.1.36",
-    "vscode-nls-dev": "^3.3.1",
-    "npm-upgrade": ">=2.0.0"
-  },
+  "main": "./dist/main.js",
   "engines": {
     "node": ">=10.15",
     "vscode": "^1.23.0"
@@ -149,6 +108,62 @@
         "command": "bandit-test-explorer.run",
         "category": "Bandit Test Explorer"
       }
+    ],
+    "jsonValidation": [
+      {
+        "fileMatch": "testsuites.json",
+        "url": "./src/configuration/testsuites.schema.json"
+      }
     ]
+  },
+  "scripts": {
+    "postinstall": "node ./node_modules/vscode/bin/install",
+    "reinstall": "gulp uninstall && npm install",
+    "clean": "gulp clean",
+    "check-packages": "npm-upgrade check",
+    "build": "webpack --mode production",
+    "build-dev": "webpack --mode development",
+    "watch": "webpack --watch --mode development",
+    "package": "vsce package",
+    "publish": "vsce publish",
+    "vscode:prepublish": "npm run build"
+  },
+  "dependencies": {
+    "async-mutex": "^0.1.3",
+    "chokidar": ">=3.0.2",
+    "fs-extra": "^8.1.0",
+    "performance-now": "^2.1.0",
+    "tslib": "^1.10.0",
+    "uuid": "^3.3.3",
+    "vscode-nls": "^4.1.1",
+    "vscode-test-adapter-api": "^1.7.0",
+    "vscode-test-adapter-util": "^0.7.0"
+  },
+  "devDependencies": {
+    "@types/fs-extra": "^8.0.0",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^12.7.2",
+    "del": "^5.0.0",
+    "event-stream": "4.0.1",
+    "gulp": "^4.0.2",
+    "gulp-cli": "^2.2.0",
+    "gulp-filter": "^6.0.0",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-typescript": "5.0.1",
+    "mocha": "^6.2.0",
+    "npm-upgrade": ">=2.0.0",
+    "npm-audit-resolver": "^1.5.0",
+    "ts-loader": "^6.0.4",
+    "tslint": "^5.19.0",
+    "typescript": "^3.5.3",
+    "vsce": ">=1.66.0",
+    "vscode": "^1.1.36",
+    "vscode-nls-dev": "^3.3.1",
+    "webpack": "^4.39.2",
+    "webpack-cli": "^3.3.7",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "babel-loader": "^8.0.6",
+    "webpack-dev-server": "^3.8.0"
   }
 }
