- updated package.json - updated launch.json and tasks.json according to webpack

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,83 +2,5 @@
   // See https://go.microsoft.com/fwlink/?LinkId=733558
   // for the documentation about the tasks.json format
   "version": "2.0.0",
-  "tasks": [
-    {
-      "type": "npm",
-      "script": "watch",
-      "isBackground": true,
-      "problemMatcher": [
-        "$tsc-watch"
-      ]
-    },
-    {
-      "type": "npm",
-      "script": "build",
-      "problemMatcher": [
-        "$gulp-tsc"
-      ]
-    },
-    {
-      "type": "npm",
-      "script": "package",
-      "problemMatcher": [
-        "$gulp-tsc"
-      ]
-    },
-    {
-      "type": "gulp",
-      "script": "build-nls",
-      "path": "",
-      "fileName": "gulpfile.js",
-      "uri": {
-        "$mid": 1,
-        "fsPath": "f:\\Projekte\\Visual Studio Code Extensions\\vscode-bandit-test-adapter\\gulpfile.js",
-        "_sep": 1,
-        "external": "file:///f%3A/Projekte/Visual%20Studio%20Code%20Extensions/vscode-bandit-test-adapter/gulpfile.js",
-        "path": "/f:/Projekte/Visual Studio Code Extensions/vscode-bandit-test-adapter/gulpfile.js",
-        "scheme": "file"
-      },
-      "problemMatcher": [
-        "$gulp-tsc"
-      ]
-    },
-    {
-      "type": "npm",
-      "script": "clean",
-      "problemMatcher": [
-        "$gulp-tsc"
-      ]
-    },
-    {
-      "type": "npm",
-      "script": "build-dev",
-      "problemMatcher": [
-        "$gulp-tsc"
-      ]
-    },
-    {
-      "type": "gulp",
-      "script": "build",
-      "path": "",
-      "fileName": "gulpfile.js",
-      "uri": {
-        "$mid": 1,
-        "fsPath": "f:\\Projekte\\Visual Studio Code Extensions\\vscode-bandit-test-adapter\\gulpfile.js",
-        "_sep": 1,
-        "external": "file:///f%3A/Projekte/Visual%20Studio%20Code%20Extensions/vscode-bandit-test-adapter/gulpfile.js",
-        "path": "/f:/Projekte/Visual Studio Code Extensions/vscode-bandit-test-adapter/gulpfile.js",
-        "scheme": "file"
-      },
-      "problemMatcher": [
-        "$gulp-tsc"
-      ]
-    },
-    {
-      "type": "npm",
-      "script": "check-packages",
-      "problemMatcher": [
-        "$gulp-tsc"
-      ]
-    }
-  ]
+  "tasks": []
 }
