--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,20 +1,18 @@
 {
   "version": "0.2.0",
-  "configurations": [{
-      "type": "node",
-      "request": "launch",
-      "name": "Gulp build",
-      "program": "${workspaceFolder}/node_modules/gulp/bin/gulp.js",
-      "args": ["build"]
-    },
+  "configurations": [
     {
       "type": "extensionHost",
       "request": "launch",
       "name": "Bandit adapter",
       "runtimeExecutable": "${execPath}",
-      "args": ["--extensionDevelopmentPath=${workspaceFolder}"],
-      "outFiles": ["${workspaceFolder}/out"],
-      "preLaunchTask": "npm: watch"
+      "args": [
+        "--extensionDevelopmentPath=${workspaceFolder}"
+      ],
+      "outFiles": [
+        "${workspaceFolder}/out"
+      ],
+      "preLaunchTask": "npm: build-dev"
     },
     {
       "name": "Launch Tests",
@@ -27,7 +25,9 @@
       ],
       "stopOnEntry": false,
       "sourceMaps": true,
-      "outFiles": ["${workspaceFolder}/out/**/*.js"],
+      "outFiles": [
+        "${workspaceFolder}/out/**/*.js"
+      ],
       "preLaunchTask": "npm: watch"
     }
   ]
