--- a/package.json
+++ b/package.json
@@ -118,9 +118,6 @@
   },
   "scripts": {
     "postinstall": "node ./node_modules/vscode/bin/install",
-    "reinstall": "gulp uninstall && npm install",
-    "clean": "gulp clean",
-    "check-packages": "npm-upgrade check",
     "build": "webpack --mode production",
     "build-dev": "webpack --mode development",
     "watch": "webpack --watch --mode development",
@@ -129,41 +126,40 @@
     "vscode:prepublish": "npm run build"
   },
   "dependencies": {
-    "async-mutex": "^0.1.3",
-    "chokidar": ">=3.0.2",
+    "async-mutex": "^0.1.4",
+    "chokidar": "^3.3.1",
     "fs-extra": "^8.1.0",
     "performance-now": "^2.1.0",
     "tslib": "^1.10.0",
-    "uuid": "^3.3.3",
+    "uuid": "^3.4.0",
     "vscode-nls": "^4.1.1",
     "vscode-test-adapter-api": "^1.7.0",
     "vscode-test-adapter-util": "^0.7.0"
   },
   "devDependencies": {
-    "@types/fs-extra": "^8.0.0",
+    "@babel/core": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "@types/fs-extra": "^8.0.1",
     "@types/mocha": "^5.2.7",
-    "@types/node": "^12.7.2",
-    "del": "^5.0.0",
+    "@types/node": "^13.5.0",
+    "babel-loader": "^8.0.6",
+    "del": "^5.1.0",
     "event-stream": "4.0.1",
+    "eslint": "^6.8.0",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.2.0",
     "gulp-filter": "^6.0.0",
     "gulp-sourcemaps": "^2.6.5",
-    "gulp-typescript": "5.0.1",
-    "mocha": "^6.2.0",
-    "npm-upgrade": ">=2.0.0",
-    "npm-audit-resolver": "^1.5.0",
-    "ts-loader": "^6.0.4",
-    "tslint": "^5.19.0",
-    "typescript": "^3.5.3",
-    "vsce": ">=1.66.0",
+    "gulp-typescript": "^5.0.1",
+    "mocha": "^7.0.0",
+    "npm-audit-resolver": "^2.2.0",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.5",
+    "vsce": "^1.71.0",
     "vscode": "^1.1.36",
     "vscode-nls-dev": "^3.3.1",
-    "webpack": "^4.39.2",
-    "webpack-cli": "^3.3.7",
-    "@babel/core": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "babel-loader": "^8.0.6",
-    "webpack-dev-server": "^3.8.0"
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1"
   }
 }
